refactor: rename test job to test-fast and update steps for clarity

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,13 +7,13 @@ on:
     branches: [main, develop]
 
 jobs:
-  test:
+  # Fast tests run on all Python versions
+  test-fast:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
       fail-fast: false
-      # GitHub runs in parallel; local `act` runs sequentially via container reuse
 
     steps:
       - uses: actions/checkout@v4
@@ -30,14 +30,36 @@ jobs:
         run: make setup
 
       - name: Run linting
+        if: matrix.python-version == '3.10'
         run: make lint
 
-      - name: Run tests with coverage
-        run: make test-coverage
+      - name: Run fast tests (unit + contract)
+        run: make test-fast
+
+  # Integration tests run only on Python 3.10 with coverage
+  test-integration:
+    runs-on: ubuntu-latest
+    needs: test-fast  # Only run if fast tests pass
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: make setup
+
+      - name: Run all tests with coverage
+        run: pytest -v --cov=lacuna --cov-report=xml -n 2 tests/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
-        if: matrix.python-version == '3.10'
         with:
           file: ./coverage.xml
           fail_ci_if_error: false
