--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
   push:
-    branches: [main, develop, "*-neuroimaging-space-handling"]
+    branches: [main, develop]
   pull_request:
     branches: [main, develop]
 
