docs: add MkDocs Material documentation site
Complete Diátaxis-framework documentation with:

Tutorials:
- Getting Started guide with installation
- First Analysis tutorial for fLNM workflow

How-to Guides:
- Installation, MRtrix3 setup, TemplateFlow config
- Connectome fetching, fLNM, sLNM, regional damage
- Batch processing, BIDS export
- Docker and Apptainer container usage

Reference:
- CLI documentation (BIDS-Apps, fetch command)
- API reference via mkdocstrings auto-generation

Explanation:
- SubjectData immutability design
- MaskData binary validation
- Coordinate spaces (MNI variants)
- Registry pattern for extensibility
- analyze() function orchestration

Infrastructure:
- mkdocs.yml with Material theme, dark mode, search
- mkdocstrings[python] with NumPy docstring style
- gen_ref_pages.py for automatic API page generation
- GitHub Actions workflow for docs deployment
- Synthetic BIDS test data in docs/assets

Resolves autorefs parsing warnings in docstrings by using
backticks instead of single quotes for code references.

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,6 @@ notebooks/
 
 # Development directories (local only, removed from git history)
 scripts/
-docs/
 specs/
 
 # direnv
@@ -102,3 +101,5 @@ notes/
 
 # Cache directories
 *_cache
+# MkDocs
+site/
