--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,12 @@ dev = [
     "mypy>=1.5",
 ]
 doc = [
-    "sphinx>=7.0",
-    "sphinx-rtd-theme>=1.3",
+    "mkdocs>=1.5",
+    "mkdocs-material>=9.5",
+    "mkdocstrings[python]>=0.24",
+    "mkdocs-gen-files>=0.5",
+    "mkdocs-literate-nav>=0.6",
+    "mkdocs-section-index>=0.3",
 ]
 all = [
     "lacuna[viz,preprocess,dev,doc]",
