feat: add tutorial data module with synthetic BIDS dataset
Add lacuna.data.tutorials module providing:
- get_tutorial_bids_dir(): Path to bundled BIDS data
- get_tutorial_subjects(): List subject IDs
- get_subject_mask_path(): Get path to specific mask
- setup_tutorial_data(): Copy data to working directory

Includes synthetic lesion masks:
- 3 subjects (sub-01 to sub-03)
- Binary masks in MNI152NLin6Asym space (1mm)
- BIDS-compliant structure

Updates:
- pyproject.toml: Include tutorial data in package
- .gitignore: Allow tutorial NIfTI files
- Tutorials: Use bundled data with correct API

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,8 @@ Thumbs.db
 !tests/fixtures/*.nii
 !src/lacuna/data/atlases/*.nii.gz
 !src/lacuna/data/templates/*.nii.gz
+!src/lacuna/data/tutorials/**/*.nii.gz
+!docs/assets/data/synthetic-bids/**/*.nii.gz
 
 # Documentation
 docs/_build/
