--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Lacuna documentation
+site_name: Lacuna
 site_description: A scientific Python package for neuroimaging lesion analysis
 site_url: https://lacuna.github.io/lacuna/
 repo_url: https://github.com/m-petersen/lacuna
@@ -7,7 +7,7 @@ edit_uri: edit/main/docs/
 
 theme:
   name: material
-  custom_dir: overrides
+  # custom_dir: overrides  <-- REMOVED (Not needed for colored logos)
   features:
     - navigation.tabs
     - navigation.sections
@@ -34,10 +34,14 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+  
+  # --- CORRECTED LOGO LOCATION ---
+  logo: assets/logo.svg
+  favicon: assets/logo.svg
+
+  # --- ICON SECTION (Repo icon only) ---
   icon:
     repo: fontawesome/brands/github
-    logo: assets/logo
-    favicon: assets/logo
 
 plugins:
   - search
@@ -82,7 +86,6 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - tables
-  # --- UPDATED EMOJI CONFIGURATION ---
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
