feat: add mkdocs-jupyter dependency for enhanced documentation support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ doc = [
     "mkdocs-gen-files>=0.5",
     "mkdocs-literate-nav>=0.6",
     "mkdocs-section-index>=0.3",
+    "mkdocs-jupyter>=0.24",
 ]
 all = [
     "lacuna[viz,preprocess,dev,doc]",
