Remove getting started guide markdown and update Jupyter notebook for Colab compatibility
- Deleted the `getting-started-guide.md` file as it was redundant.
- Updated the `getting-started.ipynb` notebook to improve the Conda setup process for Google Colab, including better handling of environment checks and output management.
- Modified the `mkdocs.yml` configuration to use the new `TagRemovePreprocessor` for handling cell tags in Jupyter notebooks.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,9 +59,13 @@ plugins:
   - mkdocs-jupyter:
       execute: false
       include_source: true
-      remove_tag_config:
-        remove_cell_tags:
-          - remove_cell
+      TagRemovePreprocessor:
+        enabled: true
+        remove_cell_tags: ["remove_cell"]
+        remove_all_outputs_tags: ["remove_output"]
+      # remove_tag_config:
+      #   remove_cell_tags:
+      #     - remove_cell
 
 markdown_extensions:
   - admonition
